Bug 46223 - Layout problem of localized help of Presenters Screen
Summary: Layout problem of localized help of Presenters Screen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other All
: medium normal
Assignee: Gábor Stefanik
URL:
Whiteboard: target:3.5.4 target:3.6.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on: 49136
Blocks:
  Show dependency treegraph
 
Reported: 2012-02-17 03:04 UTC by Andras Timar
Modified: 2015-12-15 22:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
English screenshot (92.20 KB, image/png)
2012-02-17 03:04 UTC, Andras Timar
Details
German screenshot - too small (95.63 KB, image/png)
2012-02-17 03:05 UTC, Andras Timar
Details
Hunagrian screenshot - too big (104.59 KB, image/png)
2012-02-17 03:05 UTC, Andras Timar
Details
Chinese screenshot - too big (111.87 KB, image/png)
2012-02-17 03:06 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2012-02-17 03:04:40 UTC
Created attachment 57202 [details]
English screenshot

Presenters Screen extension has its own help, which can be invoked via the Help button from its toolbar.

The layout of the help screen was supposed to be designed that way, so the text accomodates the space available. Bigger screen - bigger font size. The program tries to calculate the good font size. But it fails.

English layout is somewhat OK. German uses the same font size, but the layout is different, because in English each key is in separate line, in German (and in other localizations) multiple keys can be in the same line. Hungarian and Chinese use too big font size, text is truncated.

The task would be to find out how to do this right.

Code pointer: sdext/source/presenter/PresenterHelpView.cxx
Comment 1 Andras Timar 2012-02-17 03:05:24 UTC
Created attachment 57203 [details]
German screenshot - too small
Comment 2 Andras Timar 2012-02-17 03:05:50 UTC
Created attachment 57204 [details]
Hunagrian screenshot - too big
Comment 3 Andras Timar 2012-02-17 03:06:48 UTC
Created attachment 57205 [details]
Chinese screenshot - too big
Comment 4 Aldo Román Nureña 2012-04-12 19:08:08 UTC
I even like it more the german, hungarian and chinese versions than the english one. Reconsidering?
Comment 5 Gábor Stefanik 2012-04-14 14:28:40 UTC
I'm sorry; but how to reproduce this one?
Comment 6 Andras Timar 2012-04-14 14:37:28 UTC
(In reply to comment #5)
> I'm sorry; but how to reproduce this one?

You need 2 monitors, on the first you run the presentation (press F5 in Impress), on the second you have the Presenters Console. Press Help in Presenters Console.
Comment 7 Gábor Stefanik 2012-04-14 15:10:15 UTC
(In reply to comment #6)
> (In reply to comment #5)
> > I'm sorry; but how to reproduce this one?
> 
> You need 2 monitors, on the first you run the presentation (press F5 in
> Impress), on the second you have the Presenters Console. Press Help in
> Presenters Console.

Should the 2 monitors be in Xinerama for this to work, or as separate X screens?
Comment 8 Andras Timar 2012-04-14 15:23:49 UTC
(In reply to comment #7)
> 
> Should the 2 monitors be in Xinerama for this to work, or as separate X
> screens?

I don't know, because I've never tested this feature under Linux.
Comment 9 Gábor Stefanik 2012-05-02 03:29:52 UTC
Still unable to reproduce using the latest trunk; Presenter Console help screen is English no matter what UI language I set.

I can, however, reproduce this on my distro-shipped 3.4.5 build.
Comment 10 Andras Timar 2012-05-02 04:03:48 UTC
(In reply to comment #9)
> Still unable to reproduce using the latest trunk; Presenter Console help screen
> is English no matter what UI language I set.

See bug #49136.
Comment 11 Gábor Stefanik 2012-05-11 08:20:07 UTC
Patch submitted to mailing list, awaiting approval.
Comment 12 Not Assigned 2012-05-12 08:50:31 UTC
Gabor Stefanik committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf90a279a4ba18e73067b7a978af5ef1f1b98e27&g=libreoffice-3-5

fdo#46223: Fix Presenter Console help screen layout


It will be available in LibreOffice 3.5.4.
Comment 13 Not Assigned 2012-05-12 08:50:58 UTC
Gabor Stefanik committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5c379de9589ab819da852768a9663455dbb4a835

fdo#46223: Fix Presenter Console help screen layout
Comment 14 Robinson Tryon (qubit) 2015-12-15 22:49:44 UTC
Migrating Whiteboard tags to Keywords: (EasyHack DifficultyBeginner SkillCpp TopicUI )
[NinjaEdit]