fdo#46223: Fix Presenter Console help screen layout

Change-Id: I18d2fda46d3a6427b1691c1ff7838097bb25d0ec